[package]
name = "wgpu-remote"
version = "0.1.0"
authors = [
	"Dzmitry Malyshau <kvark@mozilla.com>",
	"Joshua Groves <josh@joshgroves.com>",
]
edition = "2018"
license = "MPL-2.0"
publish = false

[lib]
# Enabling these targets makes our CI bots try to build them and fail atm
#crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []

[dependencies.core]
path = "../wgpu-core"
package = "wgpu-core"
version = "0.5"
features = ["serde"]

[dependencies.wgt]
path = "../wgpu-types"
package = "wgpu-types"
version = "0.5"
features = ["serde"]

[dependencies]
log = "0.4"
parking_lot = { version = "0.10" }
