[package]
name = "wgpu-sync"
version = "0.19.0"
authors = ["gfx-rs developers"]
edition = "2021"
description = "Instrumentation for synchronization primitives used in wgpu"
homepage = "https://wgpu.rs/"
repository = "https://github.com/gfx-rs/wgpu"
keywords = ["graphics"]
license = "MIT OR Apache-2.0"

[features]
default = []
trace = ["unlock/trace", "unlock/parking_lot"]

[dependencies]
unlock = { version = "0.0.11", default-features = false }
# parking_lot 0.12 switches from `winapi` to `windows`; permit either
parking_lot = ">=0.11,<0.13"
