[package]
name = "wgpu-types"
version = "0.20.0"
authors = ["gfx-rs developers"]
edition = "2021"
description = "WebGPU types"
homepage = "https://wgpu.rs/"
repository = "https://github.com/gfx-rs/wgpu"
keywords = ["graphics"]
license = "MIT OR Apache-2.0"

# Override the workspace's `rust-version` key. Firefox uses `cargo vendor` to
# copy the crates it actually uses out of the workspace, so it's meaningful for
# them to have less restrictive MSRVs individually than the workspace as a
# whole, if their code permits. See `../README.md` for details.
rust-version = "1.74"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "wasm32-unknown-unknown",
]

[lib]

[features]
strict_asserts = []
fragile-send-sync-non-atomic-wasm = []
# Enables some internal instrumentation for debugging purposes.
counters = []

[dependencies]
bitflags = "2"
serde = { version = "1", features = ["derive"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = [
    "ImageBitmap",
    "HtmlVideoElement",
    "HtmlCanvasElement",
    "OffscreenCanvas",
] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.119"
