[package]
authors = ["gfx-rs developers"]
description = "WebGPU types"
edition = "2021"
homepage = "https://wgpu.rs/"
keywords = ["graphics"]
license = "MIT OR Apache-2.0"
name = "wgpu-types"
repository = "https://github.com/gfx-rs/wgpu"
version = "22.0.0"

# Override the workspace's `rust-version` key. Firefox uses `cargo vendor` to
# copy the crates it actually uses out of the workspace, so it's meaningful for
# them to have less restrictive MSRVs individually than the workspace as a
# whole, if their code permits. See `../README.md` for details.
rust-version = "1.76"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "wasm32-unknown-unknown",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]

[lib]

[features]
fragile-send-sync-non-atomic-wasm = []
serde = ["dep:serde"]
strict_asserts = []
# Enables some internal instrumentation for debugging purposes.
counters = []

[dependencies]
bitflags.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true
web-sys = { workspace = true, features = [
    "HtmlCanvasElement",
    "HtmlImageElement",
    "HtmlVideoElement",
    "ImageBitmap",
    "ImageData",
    "OffscreenCanvas",
    "VideoFrame",
] }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
