[package]
edition = "2021"
name = "xtask"
publish = false
version = "0.1.0"

[dependencies]
# The dependencies in this config have no transitive dependencies.
anyhow = "1.0.71"
env_logger = { version = "0.10.0", default-features = false }
log = "0.4.18"
pico-args = { version = "0.5.0", features = [
    "combined-flags",
    "eq-separator",
    "short-space-opt",
] }
regex-lite = "0.1.5"
xshell = "0.2.3"

[workspace]
