[package]
name = "wgpu-boids-example"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "wgpu boids example"
publish = false

[[bin]]
name = "boids"
path = "src/main.rs"
harness = false

[dependencies]
bytemuck.workspace = true
nanorand.workspace = true
wgpu-example.workspace = true
wgpu.workspace = true
winit.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-test.workspace = true

[dev-dependencies]
wgpu-test.workspace = true
